# task-distribution

./: .gitignore  .gitmodules  LICENSE  README.md  cluster-computing.cabal  run-multiples.bash  stack.yaml  task-distribution.cabal
app/: DemoTask.hs  FullBinaryExamples.hs  Main.hs  RemoteExecutable.hs  RunDemoTask.hs  Slave.hs  TestVisitCalculation.hs  VisitCalculation.hs
doc/: doc-building.bash
docker-testsetup/compose/: connect-to-namenode.bash  docker-compose.yml  start-containers.bash  stop-containers.bash
docker-testsetup/container/: build-all.bash  build-task-distribution.bash  docker-clean.bash
docker-testsetup/container/base-extended/: Dockerfile  id_rsa  id_rsa.pub  known_hosts
docker-testsetup/container/hadoop/: Dockerfile
docker-testsetup/container/hadoop-env/: Dockerfile  core-site.xml  hadoop-env.sh  hdfs-site.xml
docker-testsetup/container/java/: Dockerfile
docker-testsetup/container/task-distribution/: Dockerfile  config  start-datanode.bash  start-namenode.bash
docker-testsetup/container/task-distribution-base/: Dockerfile
docker-testsetup/container/task-distribution-example/: DemoTask_2  Dockerfile  example.bash
etc/: config  empty  remotelibs  sourcecodemodules
object-code-app/: RemoteExecutable.hs  RemoteExecutor.hs
resources/: DynamicTaskAppend.hs  DynamicTaskDuplicate.hs  DynamicTaskSortLocally.hs
resources/pseudo-db/: 1  2  3
src/: DynamicLoading.hs  TaskTypes.hs
src/ClusterComputing/: DataLocality.hs  HdfsWriter.hs  LogConfiguration.hs  RemoteExecutionSupport.hs  RunComputation.hs  TaskDistribution.hs  TaskTransport.hs
src/Control/Distributed/Task/DataAccess/: DataSource.hs  HdfsDataSource.hs  HdfsListing.hs  SimpleDataSource.hs
src/Control/Distributed/Task/Distribution/: DataLocality.hs  LogConfiguration.hs  RunComputation.hs  TaskDistribution.hs  TaskTransport.hs
src/Control/Distributed/Task/TaskSpawning/: BinaryStorage.hs  DeployFullBinary.hs  DeployObjectCodeRelinked.hs  DeploySerializedThunk.hs  ExecutionUtil.hs  FunctionSerialization.hs  ObjectCodeModuleDeployment.hs  RemoteExecutionSupport.hs  SourceCodeExecution.hs  StreamToExecutableUtil.hs  TaskDefinition.hs  TaskDescription.hs  TaskSpawning.hs  TaskSpawningTypes.hs
src/Control/Distributed/Task/Types/: HdfsConfigTypes.hs  TaskTypes.hs
src/Control/Distributed/Task/Util/: Configuration.hs  ErrorHandling.hs  FileUtil.hs  Logging.hs  SerializationUtil.hs
src/DataAccess/: DataSource.hs  HdfsDataSource.hs  HdfsWriter.hs  SimpleDataSource.hs
src/TaskSpawning/: BinaryStorage.hs  DeployCompleteProgram.hs  DeployFullBinary.hs  DeploySerializedThunk.hs  DynamicLoading.hs  ExecutionUtil.hs  FullBinaryTaskSpawningInterface.hs  FunctionSerialization.hs  ObjectCodeModuleDeployment.hs  RemoteExecutionSupport.hs  SourceCodeExecution.hs  StreamToExecutableUtil.hs  TaskDefinition.hs  TaskDescription.hs  TaskSpawning.hs  TaskTypes.hs
src/Types/: HdfsConfigTypes.hs  TaskTypes.hs
src/Util/: ErrorHandling.hs  FileUtil.hs  Logging.hs
test/: NodeMatchingTests.hs  ObjectCodeDistributionTest.hs
