name:                cluster-computing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/cluster-computing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     TaskSpawning.TaskTypes
                     , ClusterComputing.TaskDistribution
                     , DataAccess.DataSource
                     , TaskSpawning.TaskSpawning
  other-modules:       ClusterComputing.TaskTransport
                     , TaskSpawning.FunctionSerialization, TaskSpawning.SourceCodeExecution, TaskSpawning.DeployCompleteProgram
                     , DataAccess.SimpleDataSource, DataAccess.HdfsDataSource
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices -ddump-to-file
  build-depends:       base >= 4.7 && < 5
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                       -- for explicit bindings (instead of Template Haskell)
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
  default-language:    Haskell2010

executable cluster-computing
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split
                     , bytestring, text
                     , cluster-computing
  default-language:    Haskell2010

test-suite cluster-computing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cluster-computing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@michaxm.de:cluster-computing.git
