name:                cluster-computing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/cluster-computing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18


library
  hs-source-dirs:      src
  exposed-modules:     Types.TaskTypes
                     , Types.HdfsConfigTypes
                     , ClusterComputing.RunComputation
                     , ClusterComputing.TaskDistribution
                     , ClusterComputing.LogConfiguration
                     , TaskSpawning.RemoteExecutionSupport
                     , DataAccess.DataSource
  other-modules:       ClusterComputing.TaskTransport, ClusterComputing.DataLocality, ClusterComputing.HdfsWriter
                     , TaskSpawning.TaskSpawning
                     , TaskSpawning.TaskDefinition, TaskSpawning.ExecutionUtil, TaskSpawning.BinaryStorage
                     , TaskSpawning.SourceCodeExecution, TaskSpawning.DeployFullBinary, TaskSpawning.DeploySerializedThunk, TaskSpawning.FunctionSerialization, TaskSpawning.ObjectCodeModuleDeployment
                     , DataAccess.SimpleDataSource, DataAccess.HdfsDataSource
                     , Util.ErrorHandling, Util.Logging
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices -ddump-to-file
  build-depends:       base >= 4.7 && < 5
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                       -- for explicit bindings (instead of Template Haskell)
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
                     , time
                     , hashable
  default-language:    Haskell2010

executable cluster-computing
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       RemoteExecutable
                     , FullBinaryExamples
                     , VisitCalculation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends:       base
                     , split
                     , cluster-computing
                     , hslogger
                     , containers
                     , json
                     , strings
  default-language:    Haskell2010

executable cluster-computing-object-code-remote
  hs-source-dirs:      object-code-app
  main-is:             RemoteExecutor.hs
  other-modules:       RemoteExecutable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010


executable test-visit-performance
  hs-source-dirs:      app
  main-is:             TestVisitCalculation.hs
  other-modules:       RemoteExecutable
                     , VisitCalculation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends:       base
                     , split
                     , containers
                     , json
  default-language:    Haskell2010

test-suite node-matching
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             NodeMatchingTests.hs
  other-modules:       Types.TaskTypes
                     , ClusterComputing.DataLocality
                     , Util.Logging
  build-depends:       base
                     , hspec
                     , cluster-computing
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
  ghc-options:         -O0
  default-language:    Haskell2010

test-suite object-code
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             ObjectCodeDistributionTest.hs
  other-modules:       TaskSpawning.ObjectCodeModuleDeployment
                     , TaskSpawning.ExecutionUtil
                     , Types.TaskTypes
                     , Util.ErrorHandling
                     , Util.Logging
  build-depends:       base
                     , hspec
                     , cluster-computing
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
                     , time
  ghc-options:         -O0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@michaxm.de:cluster-computing.git
