name:                task-distribution
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/michaxm/task-distribution#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Mannhardt
maintainer:          example@example.com
copyright:           2016 Axel Mannhardt
category:            Distributed Computing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18


library
  hs-source-dirs:      src
  exposed-modules:     Types.TaskTypes
                     , Types.HdfsConfigTypes
                     , ClusterComputing.RunComputation
                     , ClusterComputing.TaskDistribution
                     , ClusterComputing.LogConfiguration
                     , TaskSpawning.RemoteExecutionSupport
  other-modules:       ClusterComputing.TaskTransport, ClusterComputing.DataLocality
                     , TaskSpawning.TaskSpawning
                     , TaskSpawning.TaskDefinition, TaskSpawning.TaskDescription, TaskSpawning.ExecutionUtil, TaskSpawning.StreamToExecutableUtil, TaskSpawning.BinaryStorage
                     , TaskSpawning.SourceCodeExecution, TaskSpawning.DeployFullBinary, TaskSpawning.DeploySerializedThunk, TaskSpawning.FunctionSerialization, TaskSpawning.ObjectCodeModuleDeployment
                     , DataAccess.SimpleDataSource, DataAccess.HdfsDataSource
                     , Util.ErrorHandling, Util.Logging, Util.FileUtil
                     , Control.Distributed.Task.Util.Configuration
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices -ddump-to-file
  build-depends:       base >= 4.7 && < 5
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                       -- for explicit bindings (instead of Template Haskell)
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
                     , time
                     , hashable
                     , deepseq
                     , zlib
                     , hadoop-rpc
  default-language:    Haskell2010

executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       RemoteExecutable
                     , FullBinaryExamples
                     , DemoTask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends:       base
                     , split
                     , task-distribution
                     , hslogger
                     , containers
                     , json
                     , strings
                     , bytestring
  default-language:    Haskell2010

executable task-distribution-object-code-remote
  hs-source-dirs:      object-code-app
  main-is:             RemoteExecutor.hs
  other-modules:       RemoteExecutable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010

executable run-demo-task
  hs-source-dirs:      app
  main-is:             RunDemoTask.hs
  other-modules:       DemoTask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , zlib
                     , split
  default-language:    Haskell2010

executable test-visit-performance
  hs-source-dirs:      app
  main-is:             TestVisitCalculation.hs
  other-modules:       RemoteExecutable
                     , VisitCalculation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror
  build-depends:       base
                     , split
                     , containers
                     , json
                     , bytestring
  default-language:    Haskell2010

test-suite test-node-matching
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             NodeMatchingTests.hs
  other-modules:       Types.TaskTypes
                     , Control.Distributed.Task.Util.Configuration
                     , Types.HdfsConfigTypes
                     , ClusterComputing.DataLocality
                     , Util.Logging
  build-depends:       base
                     , hspec
                     , task-distribution
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
  ghc-options:         -O0
  default-language:    Haskell2010

test-suite test-object-code
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             ObjectCodeDistributionTest.hs
  other-modules:       TaskSpawning.ObjectCodeModuleDeployment
                     , TaskSpawning.ExecutionUtil
                     , Types.TaskTypes
                     , Control.Distributed.Task.Util.Configuration
                     , Types.HdfsConfigTypes
                     , Util.ErrorHandling
                     , Util.Logging
  build-depends:       base
                     , hspec
                     , task-distribution
                     , hint
                     , binary
                     , temporary, filepath, directory
                     , transformers
                     , bytestring
                     , packman
                     , process
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , rank1dynamic
                     , distributed-static
                     , hdfs-thrift-client, text
                     , split
                     , hslogger
                     , time
  ghc-options:         -O0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@michaxm.de:task-distribution.git
